--- a/src/css/main.css
+++ b/src/css/main.css
@@ -8,11 +8,8 @@
   background-color: aliceblue;
 }
 .main-container #introduce {
-  width: 100vw;
-  height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: rgb(172, 216, 255);
   padding-left: 20px;
 }
 .main-container #introduce h1 {
@@ -42,22 +39,90 @@
 .main-container #introduce .skill-etc div:nth-of-type(1) {
   font-size: 38px;
   font-weight: bold;
-  display: inline-block;
+  display: flex;
   color: rgb(83, 83, 83);
   margin-right: 15px;
+  margin-bottom: 15px;
 }
 .main-container #introduce .skill-front div:nth-of-type(2),
 .main-container #introduce .skill-back div:nth-of-type(2),
 .main-container #introduce .skill-etc div:nth-of-type(2) {
-  display: inline-block;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.main-container #introduce .skill-front div:nth-of-type(2) svg,
+.main-container #introduce .skill-back div:nth-of-type(2) svg,
+.main-container #introduce .skill-etc div:nth-of-type(2) svg {
+  margin-right: 10px;
 }
 .main-container #introduce .skill-front div:nth-of-type(2) span,
 .main-container #introduce .skill-back div:nth-of-type(2) span,
 .main-container #introduce .skill-etc div:nth-of-type(2) span {
-  margin-right: 15px;
+  margin: 0 15px 15px 0px;
+  border: 2px solid black;
+  padding: 5px 10px;
+  border-radius: 10px;
 }
 .main-container #project {
-  width: 100vw;
-  height: 100vh;
-  background-color: rgb(255, 246, 232);
+  background-color: rgb(247, 231, 231);
+  margin: 80px 0px;
+  padding-left: 30px;
+}
+.main-container #project h1 {
+  font-size: 55px;
+  margin: 30px 0px 10px 0px;
+  position: relative;
+}
+.main-container #project h1::after {
+  position: absolute;
+  border: 1px solid black;
+  content: "";
+  width: 100%;
+  top: 36px;
+  margin-left: 40px;
+}
+.main-container #project .project-nav button {
+  margin: 30px 5px;
+  background-color: transparent;
+  font-size: 30px;
+  font-weight: bold;
+  width: 200px;
+  height: 60px;
+  cursor: pointer;
+}
+.main-container #project .project-content {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.main-container #project .project-content .project-content--react,
+.main-container #project .project-content .project-content--js,
+.main-container #project .project-content .project-content--vue {
+  width: 400px;
+  height: 300px;
+  border: 1px solid black;
+  background-color: rgb(220, 255, 220);
+  margin: 5px 10px;
+  display: flex;
+  flex-direction: column;
+}
+.main-container #project .project-content .project-content--react img,
+.main-container #project .project-content .project-content--js img,
+.main-container #project .project-content .project-content--vue img {
+  width: 90%;
+  margin: auto;
+  height: 70%;
+  background-color: antiquewhite;
+  cursor: pointer;
+}
+.main-container #project .project-content .project-content--react span,
+.main-container #project .project-content .project-content--js span,
+.main-container #project .project-content .project-content--vue span {
+  font-size: 25px;
+  font-weight: bold;
+  height: 30%;
+  padding: 0px 20px;
+  text-align: center;
+  line-height: 84px;
 }
