--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,12 +28,12 @@
   // 두번째 페이지 about-me / certificate / skill
   #introduce{
 
-    @include pageSize;
+    // @include pageSize;
     @include flex-col;
     @include h1-horizontal;
     @include introduce-span; // 이거 굳이 묶을 필요가 있을까 싶다!
 
-    background-color: rgb(172, 216, 255);
+    // background-color: rgb(172, 216, 255);
     padding-left: 20px;
 
 
@@ -48,30 +48,89 @@
     .skill-etc div:nth-of-type(1){
       font-size: 38px;
       font-weight: bold;
-      display: inline-block;
+      display: flex;
       color: rgb(83, 83, 83);
       margin-right: 15px;
+      margin-bottom: 15px;
     }
 
     .skill-front div:nth-of-type(2),
     .skill-back div:nth-of-type(2),
     .skill-etc div:nth-of-type(2){
-      display: inline-block;
-      span{
-        margin-right: 15px; 
+      @include flex-row;
+      flex-wrap:wrap;
+      svg{
+        margin-right: 10px;
       }
-
+      span{
+        margin: 0 15px 15px 0px; 
+        border: 2px solid black;
+        padding: 5px 10px;
+        border-radius: 10px;
+      }
     }
-
-   
-    
   }
 
 
   // 세번째 페이지 project
   #project{
-    @include pageSize;
-    background-color: rgb(255, 246, 232);
+    // @include pageSize;
+    @include h1-horizontal;
+    background-color: rgb(247, 231, 231);
+    margin: 80px 0px;
+
+    padding-left: 30px;
+
+    .project-nav{
+      button{
+        margin: 30px 5px;
+        background-color: transparent;
+        font-size: 30px;
+        font-weight: bold;
+        width: 200px;
+        height: 60px;
+        
+        cursor: pointer;
+      }
+    }
+
+    
+    .project-content{
+      @include flex-row;
+      flex-wrap: wrap;
+      // justify-content: center;
+
+      .project-content--react,
+      .project-content--js,
+      .project-content--vue{
+        width: 400px;
+        height: 300px;
+        border: 1px solid black;
+        background-color: rgb(220, 255, 220);
+        margin: 5px 10px;
+
+        display: flex;
+        flex-direction: column;
+        img{
+          width: 90%;
+          margin: auto;
+          // padding: 3px;
+          height: 70%;
+          background-color: antiquewhite;
+          cursor: pointer;
+        }
+        span{
+          font-size: 25px;
+          font-weight: bold;
+          height: 30%;
+          padding: 0px 20px;
+          text-align: center;
+          line-height: 84px;
+        }
+      }
+
+
+
+    }
   }
 }
-
