--- a/src/css/main.css
+++ b/src/css/main.css
@@ -65,7 +65,6 @@
   border-radius: 10px;
 }
 .main-container #project {
-  background-color: rgb(247, 231, 231);
   margin: 80px 0px;
   padding-left: 30px;
 }
@@ -102,8 +101,9 @@
   width: 400px;
   height: 300px;
   border: 1px solid black;
-  background-color: rgb(220, 255, 220);
+  background-color: rgb(56, 54, 58);
   margin: 5px 10px;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
 }
@@ -125,4 +125,5 @@
   padding: 0px 20px;
   text-align: center;
   line-height: 84px;
+  color: white;
 }
