--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -76,7 +76,7 @@
   #project{
     // @include pageSize;
     @include h1-horizontal;
-    background-color: rgb(247, 231, 231);
+    // background-color: rgb(247, 231, 231);
     margin: 80px 0px;
 
     padding-left: 30px;
@@ -106,11 +106,12 @@
         width: 400px;
         height: 300px;
         border: 1px solid black;
-        background-color: rgb(220, 255, 220);
+        background-color: rgb(56, 54, 58);
         margin: 5px 10px;
-
+        border-radius: 10px;
         display: flex;
         flex-direction: column;
+
         img{
           width: 90%;
           margin: auto;
@@ -126,6 +127,7 @@
           padding: 0px 20px;
           text-align: center;
           line-height: 84px;
+          color: white;
         }
       }
 
