--- a/src/css/headerNav.css
+++ b/src/css/headerNav.css
@@ -1,10 +1,32 @@
 #header-container {
   display: flex;
-}
-
-#menu {
   width: 100px;
+  height: 100%;
+  position: fixed;
   background-color: rgb(56, 54, 58);
-  display: flex;
   border-right: 3px solid rgb(255, 255, 255);
+}
+#header-container .header-nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#header-container .header-nav div {
+  width: 90px;
+  height: 90px;
+  color: white;
+  margin: 25px 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#header-container .header-nav div a {
+  color: white;
+}
+#header-container .header-nav div a .icon {
+  font-size: 50px;
+}
+#header-container .header-nav div a:hover {
+  color: black;
+  transition-duration: 0.3s;
 }
