--- a/src/scss/headerNav.scss
+++ b/src/scss/headerNav.scss
@@ -2,16 +2,46 @@
 
 #header-container{
     display: flex;
-    // width: 100%;
-    // height: 100%;
+    width: 100px;
+    height: 100%;
+    position: fixed;
+    background-color: $main-color-gray;
+    border-right: 3px solid rgb(255, 255, 255);
+  
+    
+        .header-nav{
+            @include flex-col;
+            justify-content: center;
+
+            div{
+                width: 90px;
+                height: 90px; 
+                // background-color: red;
+                color: white;
+                margin: 25px 5px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                a{
+                    color: white;
+                    .icon{
+                        // width: 50px;
+                        // height: 50px;
+                        font-size: 50px
+                   }
+                }
+
+                a:hover{
+                    color: black;
+                    transition-duration: 0.3s;
+                }
+               
+            }
+        }
+
+
+
+
+
 
 }
-#menu{
-    width: 100px;
-    // 373737
-    background-color: $main-color-gray;
-    display: flex;
-    border-right: 3px solid rgb(255, 255, 255);
-    // border-right: white;
-    
-}   
