--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,6 +1,6 @@
 footer {
-  width: 100%;
-  height: 120px;
+  width: 100vw;
+  height: 200px;
   background-color: rgb(56, 54, 58);
   padding: 30px 0px;
   display: flex;
@@ -15,16 +15,20 @@ footer .footer-nav .git, footer .footer-nav .blog {
   width: 90px;
   height: 90px;
   margin-left: 50px;
-  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-footer .footer-nav .git .icon, footer .footer-nav .blog .icon {
+footer .footer-nav .git a, footer .footer-nav .blog a {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+footer .footer-nav .git a .icon, footer .footer-nav .blog a .icon {
   font-size: 80px;
   color: white;
 }
-footer .footer-nav .git .icon:hover, footer .footer-nav .blog .icon:hover {
+footer .footer-nav .git a .icon:hover, footer .footer-nav .blog a .icon:hover {
   color: black;
   transition-duration: 0.3s;
 }
@@ -32,4 +36,7 @@ footer .footer-rights {
   text-align: center;
   color: white;
   margin: 15px 0px;
+}
+footer .footer-rights span {
+  height: 100px;
 }
