--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,26 +1,26 @@
-.main-container {
-  margin-left: 100px;
+#main-container {
+  margin-left: 103px;
 }
-.main-container header {
+#main-container header {
   width: 100vw;
   height: 100vh;
-  width: 100%;
+  width: calc(100vw - 103px);
   font-size: 100px;
   color: red;
   font-weight: bold;
   background-color: aliceblue;
 }
-.main-container #introduce {
+#main-container #introduce {
   display: flex;
   flex-direction: column;
   padding-left: 20px;
 }
-.main-container #introduce h1 {
+#main-container #introduce h1 {
   font-size: 55px;
   margin: 30px 0px 10px 0px;
   position: relative;
 }
-.main-container #introduce h1::after {
+#main-container #introduce h1::after {
   position: absolute;
   border: 1px solid black;
   content: "";
@@ -28,18 +28,18 @@
   top: 36px;
   margin-left: 40px;
 }
-.main-container #introduce span {
+#main-container #introduce span {
   font-size: 27px;
   font-weight: bold;
   padding: 3px 0px;
 }
-.main-container #introduce .about-me, .main-container #introduce .certificate, .main-container #introduce .skill {
+#main-container #introduce .about-me, #main-container #introduce .certificate, #main-container #introduce .skill {
   display: flex;
   flex-direction: column;
 }
-.main-container #introduce .skill-front div:nth-of-type(1),
-.main-container #introduce .skill-back div:nth-of-type(1),
-.main-container #introduce .skill-etc div:nth-of-type(1) {
+#main-container #introduce .skill-front div:nth-of-type(1),
+#main-container #introduce .skill-back div:nth-of-type(1),
+#main-container #introduce .skill-etc div:nth-of-type(1) {
   font-size: 38px;
   font-weight: bold;
   display: flex;
@@ -47,36 +47,36 @@
   margin-right: 15px;
   margin-bottom: 15px;
 }
-.main-container #introduce .skill-front div:nth-of-type(2),
-.main-container #introduce .skill-back div:nth-of-type(2),
-.main-container #introduce .skill-etc div:nth-of-type(2) {
+#main-container #introduce .skill-front div:nth-of-type(2),
+#main-container #introduce .skill-back div:nth-of-type(2),
+#main-container #introduce .skill-etc div:nth-of-type(2) {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
-.main-container #introduce .skill-front div:nth-of-type(2) svg,
-.main-container #introduce .skill-back div:nth-of-type(2) svg,
-.main-container #introduce .skill-etc div:nth-of-type(2) svg {
+#main-container #introduce .skill-front div:nth-of-type(2) svg,
+#main-container #introduce .skill-back div:nth-of-type(2) svg,
+#main-container #introduce .skill-etc div:nth-of-type(2) svg {
   margin-right: 10px;
 }
-.main-container #introduce .skill-front div:nth-of-type(2) span,
-.main-container #introduce .skill-back div:nth-of-type(2) span,
-.main-container #introduce .skill-etc div:nth-of-type(2) span {
+#main-container #introduce .skill-front div:nth-of-type(2) span,
+#main-container #introduce .skill-back div:nth-of-type(2) span,
+#main-container #introduce .skill-etc div:nth-of-type(2) span {
   margin: 0 15px 15px 0px;
   border: 2px solid black;
   padding: 5px 10px;
   border-radius: 10px;
 }
-.main-container #project {
+#main-container #project {
   margin: 80px 0px;
   padding-left: 30px;
 }
-.main-container #project h1 {
+#main-container #project h1 {
   font-size: 55px;
   margin: 30px 0px 10px 0px;
   position: relative;
 }
-.main-container #project h1::after {
+#main-container #project h1::after {
   position: absolute;
   border: 1px solid black;
   content: "";
@@ -84,7 +84,7 @@
   top: 36px;
   margin-left: 40px;
 }
-.main-container #project .project-nav button {
+#main-container #project .project-nav button {
   margin: 30px 5px;
   background-color: transparent;
   font-size: 30px;
@@ -93,14 +93,12 @@
   height: 60px;
   cursor: pointer;
 }
-.main-container #project .project-content {
+#main-container #project .project-content {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
-.main-container #project .project-content .project-content--react,
-.main-container #project .project-content .project-content--js,
-.main-container #project .project-content .project-content--vue {
+#main-container #project .project-content .project-content--link {
   width: 400px;
   height: 300px;
   border: 1px solid black;
@@ -109,19 +107,16 @@
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  text-decoration: none;
 }
-.main-container #project .project-content .project-content--react img,
-.main-container #project .project-content .project-content--js img,
-.main-container #project .project-content .project-content--vue img {
+#main-container #project .project-content .project-content--link img {
   width: 90%;
   margin: auto;
   height: 70%;
   background-color: antiquewhite;
   cursor: pointer;
 }
-.main-container #project .project-content .project-content--react span,
-.main-container #project .project-content .project-content--js span,
-.main-container #project .project-content .project-content--vue span {
+#main-container #project .project-content .project-content--link span {
   font-size: 25px;
   font-weight: bold;
   height: 30%;
