--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,8 +1,8 @@
 @import '_variables';
 
 footer{
-    width: 100%;
-    height: 120px;
+    width: 100vw;
+    height: 200px;
     background-color: $main-color-gray;
     padding: 30px 0px;
     @include flex-col;
@@ -15,18 +15,26 @@ footer{
             height: 90px;
             margin-left: 50px;
             // background-color: rgb(255, 151, 151);
-            cursor: pointer;
+            // cursor: pointer;
             display: flex;
             justify-content: center;
             align-items: center;
-            .icon{
-                font-size: 80px;
-                color: white;
+            a{
+                display: inline-block;
+                width: 100%;
+                height: 100%;
+
+                .icon{
+                    font-size: 80px;
+                    color: white;
+                }
+
+                .icon:hover{
+                    color: black;
+                    transition-duration: 0.3s;
+                }
             }
-            .icon:hover{
-                color: black;
-                transition-duration: 0.3s;
-            }
+            
         }
     }
 
@@ -34,5 +42,9 @@ footer{
         text-align: center;
         color: white;
         margin: 15px 0px;
+        
+        span{
+            height: 100px;
+        };
     }
 }
