--- a/src/scss/headerNav.scss
+++ b/src/scss/headerNav.scss
@@ -2,13 +2,15 @@
 
 #header-container{
     display: flex;
+
     width: 100px;
     height: 100%;
+    top: 0;
+    left: 0;
     position: fixed;
     background-color: $main-color-gray;
     border-right: 3px solid rgb(255, 255, 255);
-  
-    
+
         .header-nav{
             @include flex-col;
             justify-content: center;
