--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,10 +1,14 @@
 @import "_variables";
 
-body{
+*{
     margin: 0;
     padding: 0;
-   overflow-x: hidden;
+    overflow-x: hidden;
+    box-sizing: border-box;
 }
+// body{
+  
+// }
 
 
 #index-container{
