--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -40,3 +40,32 @@ $main-color-gray :rgb(56, 54, 58);
         // transition-duration: width 3s;
       }
 }
+
+// project content -- go to git btn
+@mixin goGithub{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 50px 0px;
+    button{
+        width: 200px;
+        height: 100px;
+        font-size: 20px;
+        border-radius: 6px;
+        background-color: transparent;
+       
+        a{
+            text-decoration: none;
+            color: black;
+        }
+    }
+
+    button:hover{
+        background-color: black;
+        border: 1px solid white;
+        transition-duration: 0.3s;
+        a{
+            color: white;
+        }
+    }
+}
