--- a/src/css/commom.css
+++ b/src/css/commom.css
@@ -1,30 +1,30 @@
-#project-component {
-  margin-left: 100px;
-  min-height: 85vh;
+#pj-component {
+  margin-bottom: 50px;
 }
-#project-component .project-component--title {
-  width: 90%;
+#pj-component .pj-component--title {
   display: flex;
   flex-direction: column;
   border: 1px solid black;
+  border-radius: 10px;
   padding: 20px 50px;
   margin: 50px 0px 20px 0px;
-  font-size: 30px;
 }
-#project-component .project-component--title h1 {
-  margin: 10px 0px;
+#pj-component .pj-component--title h1 {
+  margin: 10px 0px 13px 0px;
+  font-size: 40px;
 }
-#project-component .project-component--title span {
-  font-size: 25px;
+#pj-component .pj-component--title span {
+  font-size: 23px;
 }
-#project-component .project-component--skill div {
+#pj-component .pj-component--skill div {
   width: 40%;
   display: flex;
   flex-direction: column;
   border: 1px solid black;
   padding: 20px 50px;
+  margin-bottom: 30px;
 }
-#project-component .project-component--skill span {
+#pj-component .pj-component--skill span {
   font-size: 23px;
   font-weight: bold;
 }
