--- a/src/scss/commom.scss
+++ b/src/scss/commom.scss
@@ -1,33 +1,30 @@
 
-#project-component{
-    margin-left: 100px;
-    min-height: 85vh;
-    .project-component--title{
-        width: 90%;
+#pj-component{
+    margin-bottom: 50px;
+    .pj-component--title{
         display: flex;
         flex-direction: column;
         border: 1px solid black;
+        border-radius: 10px;
         padding: 20px 50px;
         margin: 50px 0px 20px 0px;
-        font-size:30px ;
         h1{
-            margin: 10px 0px;
+            margin: 10px 0px 13px 0px;
+            font-size:40px ;
         }
         span{
-            font-size: 25px;
+            font-size: 23px;
         }
-
     }
-    .project-component--skill{
+    .pj-component--skill{
         div{
             width: 40%;
             display: flex;
             flex-direction: column;
             border: 1px solid black;
             padding: 20px 50px;
-      
+            margin-bottom: 30px;
         }
-        
         span{
             font-size: 23px;
             font-weight: bold;
