--- a/src/css/petBoard.css
+++ b/src/css/petBoard.css
@@ -77,13 +77,27 @@
 #project-component .pet--modify {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-gap: 20px;
   margin: 50;
+  justify-items: center;
+  text-align: center;
 }
-#project-component .pet--modify .aaa {
-  grid-row: 2/4;
+#project-component .pet--modify span {
+  font-size: 25px;
+  color: rgb(56, 54, 58);
+  font-weight: bold;
 }
-#project-component .pet--modify .bbb {
+#project-component .pet--modify .pet--modify--item5 {
   grid-row: 2/4;
+  grid-column: 2;
+}
+#project-component .pet--modify .pet--modify--item6 {
+  grid-row: 2/4;
+  grid-column: 3;
+}
+#project-component .pet--modify .pet--modify--item8 {
+  grid-column: 1/-1;
 }
 #project-component .pet--menu {
   display: flex;
