--- a/src/scss/petBoard.scss
+++ b/src/scss/petBoard.scss
@@ -73,14 +73,34 @@
             // @include flex-row;
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: auto ;
+            grid-gap: 20px;
             margin: 50;
+            justify-items: center;
+            text-align: center;
 
-            .aaa{
-                // grid-column: 2/3;
-                grid-row: 2 /4 ;
+            span{
+                font-size: 25px;
+                color: $main-color-gray;
+                font-weight: bold;
             }
-            .bbb{
+
+            .pet--modify--item5{
                 grid-row: 2 /4 ;
+                grid-column: 2;
+                // width: 100%;
+                // grid-area: auto;
+               
+                img{
+                    // margin-top:100px;
+                }
+            }
+            .pet--modify--item6{
+                grid-row: 2 / 4 ;
+                grid-column: 3;
+            }
+            .pet--modify--item8{
+                grid-column: 1 / -1;
             }
 
         }
