--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -152,3 +152,14 @@
 //     color: rgb(255, 0, 0);
 //     font-size: 40px;
 // }
+
+
+
+// 
+
+#cursor{
+  position: absolute;
+  background-color: red;
+  width: 10px;
+  height: 10px;
+}
