--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,21 @@
+body {
+  cursor: none;
+}
+
+#cursor {
+  position: absolute;
+  background-color: rgba(77, 49, 18, 0.4);
+  left: 0;
+  top: 0;
+  width: 50px;
+  height: 50px;
+  border-radius: 45px;
+  border: 1px solid rgb(255, 186, 186);
+  z-index: 2;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+}
+
 #main-container {
   margin-left: 103px;
 }
@@ -33,6 +51,9 @@
   font-weight: bold;
   padding: 3px 0px;
 }
+#main-container #introduce span {
+  display: inline-flex;
+}
 #main-container #introduce .about-me, #main-container #introduce .certificate, #main-container #introduce .skill {
   display: flex;
   flex-direction: column;
@@ -66,6 +87,12 @@
   border: 2px solid black;
   padding: 5px 10px;
   border-radius: 10px;
+}
+#main-container #introduce span:hover #cursor {
+  transform: scale(5);
+}
+#main-container #introduce span:hover {
+  color: red;
 }
 #main-container #project {
   margin: 80px 0px;
