--- a/src/scss/cursor.scss
+++ b/src/scss/cursor.scss
@@ -7,23 +7,29 @@ body{
 #cursor{
   position: absolute;
 
-  background-color: transparent;
+  background-color: rgba(77, 49, 18, 0.4);
 
   left: 0;
   top: 0;
   width: 50px;
   height: 50px;
-
+  mix-blend-mode: difference;
   border-radius: 45px;
-  border: 1px solid red;
+  border: 1px solid rgb(255, 186, 186);
   z-index: 2;
   pointer-events: none;
   transform: translate(-50%, -50%);
 }
+
+
+
 #cursor::before{
   // position: absolute;
   // background-color: red;
   // width: 30px;
   // height: 30px;
+}
+#cursor {
+  
 }
 
