--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import "_variables";
 
+@import "cursor";
 
 @mixin introduce-span{
   span{
@@ -37,7 +38,9 @@
     // background-color: rgb(172, 216, 255);
     padding-left: 20px;
 
-
+    span{
+      display: inline-flex;
+    }
 
     .about-me,.certificate,.skill{
       @include flex-col;
@@ -70,6 +73,16 @@
         border-radius: 10px;
       }
     }
+
+    
+    span:hover #cursor{ 
+      transform: scale(5);
+    }
+    
+    span:hover{
+      color: red;
+    }
+
   }
 
 
