--- a/src/css/cursor.css
+++ b/src/css/cursor.css
@@ -4,15 +4,16 @@ body {
 
 #cursor {
   position: absolute;
-  background-color: rgba(77, 49, 18, 0.4);
+  background-color: rgb(187, 141, 185);
   left: 0;
   top: 0;
-  width: 50px;
-  height: 50px;
+  width: 20px;
+  height: 20px;
   mix-blend-mode: difference;
   border-radius: 45px;
-  border: 1px solid rgb(255, 186, 186);
+  border: 1px solid rgb(189, 164, 164);
   z-index: 2;
   pointer-events: none;
   transform: translate(-50%, -50%);
+  transition: transform 0.2s;
 }
