--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,20 +4,23 @@ body {
 
 #cursor {
   position: absolute;
-  background-color: rgba(77, 49, 18, 0.4);
+  background-color: rgb(187, 141, 185);
   left: 0;
   top: 0;
-  width: 50px;
-  height: 50px;
+  width: 20px;
+  height: 20px;
+  mix-blend-mode: difference;
   border-radius: 45px;
-  border: 1px solid rgb(255, 186, 186);
+  border: 1px solid rgb(189, 164, 164);
   z-index: 2;
   pointer-events: none;
   transform: translate(-50%, -50%);
+  transition: transform 0.2s;
 }
 
 #main-container {
   margin-left: 103px;
+  background-color: white;
 }
 #main-container header {
   width: 100vw;
@@ -53,6 +56,7 @@ body {
 }
 #main-container #introduce span {
   display: inline-flex;
+  color: black;
 }
 #main-container #introduce .about-me, #main-container #introduce .certificate, #main-container #introduce .skill {
   display: flex;
@@ -87,12 +91,7 @@ body {
   border: 2px solid black;
   padding: 5px 10px;
   border-radius: 10px;
-}
-#main-container #introduce span:hover #cursor {
-  transform: scale(5);
-}
-#main-container #introduce span:hover {
-  color: red;
+  align-items: center;
 }
 #main-container #project {
   margin: 80px 0px;
