--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 
 #main-container{
   margin-left: 103px;
+  background-color: white;
   // width: 100vw;
   //  첫번째 페이지 header - minji's portpolio!
   header{
@@ -37,9 +38,11 @@
 
     // background-color: rgb(172, 216, 255);
     padding-left: 20px;
-
+    
     span{
       display: inline-flex;
+      color: black;
+      // background-color: white;
     }
 
     .about-me,.certificate,.skill{
@@ -71,17 +74,12 @@
         border: 2px solid black;
         padding: 5px 10px;
         border-radius: 10px;
+        align-items: center;
       }
     }
 
     
-    span:hover #cursor{ 
-      transform: scale(5);
-    }
-    
-    span:hover{
-      color: red;
-    }
+   
 
   }
 
