--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -40,13 +40,18 @@
     padding-left: 20px;
     
     span{
-      display: inline-flex;
-      color: black;
+      
+      
       // background-color: white;
     }
 
     .about-me,.certificate,.skill{
-      @include flex-col;
+      // @include flex-col;
+      span{
+        display: table;
+        color: black;
+      }
+
     }
 
 
@@ -173,9 +178,13 @@
     .project-content::-webkit-scrollbar {
       display: none; /* Chrome, Safari, Opera*/
     }
+
   }
  
 } 
+  #project > div::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera*/
+  }
 
 
 // .project-nav--active{
@@ -185,12 +194,39 @@
 // }
 
 
+/***************** project hover event!!! ************************/
 
-
-// 
 #project--component--container{
-  // width: 420px;
-  // height: 310px;
+
   display: inline-block;
 }
 
+.project--click--content--effect{
+  
+ 
+  transition: transform 0.5s ;
+  // top: 50px;
+  // left: 50px;
+  display: inline-block;
+  // transform: rotateY(90deg);
+  animation-name: cardhover;
+  animation-duration: 0.5s;
+  perspective: 300px;
+  // animation-timing-function: ?;
+ 
+}
+
+@keyframes cardhover {
+  0%{
+    
+  }
+  
+  50%{
+    transform:  rotateY(-90deg);
+    
+  }
+  100%{
+    transform: rotateY(-180deg);
+
+  }
+}
