--- a/src/css/headerNav.css
+++ b/src/css/headerNav.css
@@ -21,6 +21,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 #header-container .header-nav div a {
   color: white;
@@ -31,4 +32,17 @@
 #header-container .header-nav div a:hover {
   color: black;
   transition-duration: 0.3s;
+}
+#header-container .header-nav div a:hover::before {
+  position: absolute;
+  content: "";
+  top: 70px;
+  left: 0;
+  width: 100px;
+  height: 30px;
+  border: 2px solid black;
+  background-color: transparent;
+}
+#header-container .header-nav div div::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
 }
