--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,6 +17,7 @@ body {
   transform: translate(-50%, -50%);
   transition: transform 0.8s;
   z-index: 999;
+  color: rgb(196, 0, 0);
 }
 
 #main-container {
