--- a/src/scss/headerNav.scss
+++ b/src/scss/headerNav.scss
@@ -24,8 +24,10 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                position: relative;
                 a{
                     color: white;
+                    
                     .icon{
                         // width: 50px;
                         // height: 50px;
@@ -37,7 +39,21 @@
                     color: black;
                     transition-duration: 0.3s;
                 }
-               
+                a:hover::before{
+                    position: absolute;
+                    content: '';
+                    top: 70px;
+                    left: 0;
+                    width: 100px;
+                    height: 30px;
+                    border: 2px solid black;
+                    background-color: transparent;
+                    // background-image: url('/public/images/');
+
+                }
+                div::-webkit-scrollbar {
+                    display: none; /* Chrome, Safari, Opera*/
+                  }
             }
         }
 
