--- a/src/css/headerNav.css
+++ b/src/css/headerNav.css
@@ -14,17 +14,16 @@
   justify-content: center;
 }
 #header-container .header-nav div {
-  width: 90px;
-  height: 90px;
+  width: 86px;
+  height: 110px;
   color: white;
-  margin: 25px 5px;
+  margin: 0px 5px;
   display: flex;
   justify-content: center;
-  align-items: center;
-  position: relative;
 }
 #header-container .header-nav div a {
   color: white;
+  position: relative;
 }
 #header-container .header-nav div a .icon {
   font-size: 50px;
@@ -36,12 +35,26 @@
 #header-container .header-nav div a:hover::before {
   position: absolute;
   content: "";
-  top: 70px;
+  top: 55px;
   left: 0;
-  width: 100px;
+  width: 90%;
   height: 30px;
   border: 2px solid black;
+  border-radius: 4px;
   background-color: transparent;
+  z-index: 99;
+}
+#header-container .header-nav div a:nth-child(1):hover::before {
+  content: "Home";
+}
+#header-container .header-nav div a:nth-child(2):hover::before {
+  content: "AboutMe";
+}
+#header-container .header-nav div a:nth-child(3):hover::before {
+  content: "Projects";
+}
+#header-container .header-nav div a:nth-child(4):hover::before {
+  content: "Concat";
 }
 #header-container .header-nav div div::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera*/
