--- a/src/scss/headerNav.scss
+++ b/src/scss/headerNav.scss
@@ -16,18 +16,18 @@
             justify-content: center;
 
             div{
-                width: 90px;
-                height: 90px; 
+                width: 86px;
+                height: 110px; 
                 // background-color: red;
                 color: white;
-                margin: 25px 5px;
+                margin: 0px 5px;
                 display: flex;
                 justify-content: center;
-                align-items: center;
-                position: relative;
+                // align-items: center;
+               
                 a{
                     color: white;
-                    
+                    position: relative;
                     .icon{
                         // width: 50px;
                         // height: 50px;
@@ -42,18 +42,34 @@
                 a:hover::before{
                     position: absolute;
                     content: '';
-                    top: 70px;
+                    top: 55px;
                     left: 0;
-                    width: 100px;
+                    width: 90%;
+                    // height: 20px;
+                    // margin-left: 5px;
                     height: 30px;
                     border: 2px solid black;
+                    border-radius: 4px;
                     background-color: transparent;
-                    // background-image: url('/public/images/');
-
+                    z-index: 99;
                 }
+                a:nth-child(1):hover::before{
+                    content: 'Home';
+                }
+                a:nth-child(2):hover::before{
+                    content: 'AboutMe';
+                }
+                a:nth-child(3):hover::before{
+                    content: 'Projects';
+                }
+                a:nth-child(4):hover::before{
+                    content: 'Concat';
+                }
+
+
                 div::-webkit-scrollbar {
                     display: none; /* Chrome, Safari, Opera*/
-                  }
+                }
             }
         }
 
