--- a/src/css/headerNav.css
+++ b/src/css/headerNav.css
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
 }
 #header-container .header-nav div {
   width: 86px;
@@ -35,27 +36,53 @@
 #header-container .header-nav div a:hover::before {
   position: absolute;
   content: "";
-  top: 55px;
+  top: 60px;
   left: 0;
   width: 90%;
-  height: 30px;
-  border: 2px solid black;
-  border-radius: 4px;
+  border: 2px solid white;
+  border-radius: 5px;
   background-color: transparent;
+  padding: 5px 0px;
+  color: white;
   z-index: 99;
+  text-align: center;
+  font-size: 12px;
 }
-#header-container .header-nav div a:nth-child(1):hover::before {
+#header-container .header-nav div a:hover::after {
+  content: "";
+  top: 50px;
+  left: 20px;
+  border: 5px solid transparent;
+  border-bottom: 5px solid white;
+  z-index: 99;
+  position: absolute;
+}
+#header-container .header-nav div a::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
+#header-container .header-nav div:nth-child(1) a:hover::before {
   content: "Home";
 }
-#header-container .header-nav div a:nth-child(2):hover::before {
-  content: "AboutMe";
+#header-container .header-nav div:nth-child(2) a:hover::before {
+  content: "About Me";
 }
-#header-container .header-nav div a:nth-child(3):hover::before {
+#header-container .header-nav div:nth-child(3) a:hover::before {
   content: "Projects";
 }
-#header-container .header-nav div a:nth-child(4):hover::before {
-  content: "Concat";
+#header-container .header-nav div:nth-child(4) a:hover::before {
+  content: "Contact";
 }
-#header-container .header-nav div div::-webkit-scrollbar {
+#header-container .header-nav div::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera*/
+}
+#header-container .return--projects {
+  display: none;
+  position: absolute;
+  top: 50px;
+  left: 30px;
+  border: 1px solid rgb(255, 255, 255);
+  width: 50px;
+  height: 50px;
+  background-color: red;
+  z-index: 99;
 }
