--- a/src/scss/headerNav.scss
+++ b/src/scss/headerNav.scss
@@ -67,18 +67,35 @@
                 }
                
             }
+
             div:nth-child(1) a:hover::before{
+                content: 'Back';
+                top: 30px;
+                right: 20px;
+                width: 100%;
+            }
+            div:nth-child(1) a:hover::after{
+             
+                top: 20px;
+                left: 20px;
+            }
+
+
+
+            div:nth-child(2) a:hover::before{
                 content: 'Home';
             }
-            div:nth-child(2) a:hover::before{
+            div:nth-child(3) a:hover::before{
                 content: 'About Me';
             }
-            div:nth-child(3) a:hover::before{
+            div:nth-child(4) a:hover::before{
                 content: 'Projects';
             }
-            div:nth-child(4) a:hover::before{
+            div:nth-child(5) a:hover::before{
                 content: 'Contact';
             }
+           
+
             div::-webkit-scrollbar {
                 display: none; /* Chrome, Safari, Opera*/
             }
@@ -91,12 +108,10 @@
             display: none;
             position: absolute;
             top: 50px;
-            left: 30px;
-            border:1px solid rgb(255, 255, 255);
-            width: 50px;
-            height: 50px;
-            background-color: red;
+            left: 22px;
             z-index: 99;
+            width: 50px  !important;
+            height: 120px !important;
         }
 
 
