--- a/src/css/petBoard.css
+++ b/src/css/petBoard.css
@@ -96,7 +96,7 @@
 }
 #project-component .pet--modify span {
   font-size: 25px;
-  color: rgb(56, 54, 58);
+  color: black;
   font-weight: bold;
 }
 #project-component .pet--modify .pet--modify--item5 {
