--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -3,7 +3,7 @@
 footer{
     width: 100vw;
     height: 200px;
-    background-color: $main-color-gray;
+    background-color: $main-color;
     padding: 30px 0px;
     @include flex-col;
 
