--- a/src/scss/headerNav.scss
+++ b/src/scss/headerNav.scss
@@ -8,7 +8,7 @@
     top: 0;
     left: 0;
     position: fixed;
-    background-color: $main-color-gray;
+    background-color: $main-color;
     border-right: 3px solid rgb(255, 255, 255);
 
         .header-nav{
