--- a/src/css/main.css
+++ b/src/css/main.css
@@ -27,13 +27,12 @@ body {
 #main-container #home {
   width: 100vw;
   height: 100vh;
-  background-color: black;
   display: flex;
   padding: 0px 0px 50px 30px;
 }
 #main-container #home .home--title {
   font-size: 100px;
-  color: white;
+  color: rgb(240, 156, 156);
   font-weight: bold;
   display: flex;
   flex-direction: column;
@@ -138,7 +137,7 @@ body {
   width: 400px;
   height: 300px;
   border: 1px solid black;
-  background-color: rgb(11, 0, 19);
+  background-color: rgb(56, 54, 58);
   margin: 5px 10px;
   border-radius: 10px;
   display: flex;
