--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -108,7 +108,6 @@
     @include h1-horizontal;
     // background-color: rgb(247, 231, 231);
     margin: 80px 0px;
-
     padding-left: 30px;
 
     .project-nav{
@@ -207,6 +206,50 @@
 // }
 
 
+//  네번째 페이지 contact
+
+#contact{
+  @include h1-horizontal;
+  
+  height: 800px;
+
+  padding-left: 30px;
+
+.contact--list{
+  @include flex-col;
+
+
+
+  .contact--git{
+
+  }
+
+
+  .contact--blog{
+
+  }
+}
+
+
+
+
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 /***************** project hover event!!! ************************/
 
 #project--component--container{
@@ -243,3 +286,21 @@
 
   }
 }
+
+
+//  full page scroll
+
+// Section{
+//   height: auto;
+//   max-height: auto;
+// }
+
+
+#home{
+  // height: 960px;
+}
+// #introduce,
+// #project{
+//   height: auto;
+//   max-height: none;
+// }
