--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,7 +12,6 @@ body {
   mix-blend-mode: difference;
   border-radius: 45px;
   border: 1px solid rgb(95, 94, 94);
-  z-index: 2;
   pointer-events: none;
   transform: translate(-50%, -50%);
   transition: transform 0.8s;
@@ -25,6 +24,7 @@ body {
   background-color: white;
 }
 #main-container #home {
+  height: 100vh;
   display: flex;
   padding: 0px 0px 50px 30px;
 }
@@ -169,6 +169,27 @@ body {
   display: none; /* Chrome, Safari, Opera*/
 }
 
+#contact {
+  height: 800px;
+  padding-left: 30px;
+}
+#contact h1 {
+  font-size: 55px;
+  margin: 30px 0px 10px 0px;
+  position: relative;
+}
+#contact h1::after {
+  position: absolute;
+  border: 1px solid black;
+  content: "";
+  width: 100%;
+  top: 36px;
+  margin-left: 40px;
+}
+#contact .contact--list {
+  display: flex;
+  flex-direction: column;
+}
 /***************** project hover event!!! ************************/
 #project--component--container {
   display: inline-block;
