--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -216,18 +216,74 @@
   padding-left: 30px;
 
 .contact--list{
-  @include flex-col;
+  @include flex-row;
+
+  // margin: ;
+
+  // height: 1000px;
+
+  .contact--flip{
+
+    width: 300px;
+    height:   300px;
+    perspective: 1100px;
+
+    padding: 30px;
+    // justify-content: center;
+    margin-left: 20px;
+
+  
+    
+
+    .contact--card{
+
+      
+      width: 100%;
+      height: 100%;
+
+      position: relative;
+      transition: .4s;
+      transform-style: preserve-3d;
+      
+      .card--front, .card--back {
+        position: absolute;
+        width: 100%; 
+        height: 100%;
+        // -webkit-backface-visibility: hidden;
+        // backface-visibility: hidden;
+        // transform-style: preserve-3d;
+      }
+  
+      .card--front{
+        background-color: rgb(255, 246, 246);
+        border-radius: 4px;
+        border: 1px solid red;
+      }
+      .card--back{
+        transform: rotateY(180deg);
+        background-color: rgb(211, 252, 255);
+        border-radius: 4px;
+        border: 1px solid rgb(64, 83, 255);
+        a{
+          font-size: 30px;
+          color: black;
+          // margin:auto;
+        }
+      }
 
 
 
-  .contact--git{
-
+    }
+    
+    
+  }
+  .contact--flip:hover .contact--card {
+    transform: rotateY(180deg);
   }
 
+  // .contact--blog{
 
-  .contact--blog{
-
-  }
+  // }
 }
 
 
