--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -225,14 +225,15 @@
     
     width: 300px;
     height: 300px;
+    //  위에 원래는300PX 
     perspective: 1200px;
 
     padding: 30px;
     // justify-content: center;
     margin-left: 20px;
-    // transform-style: preserve-3d;
+    // transform-style: preserve-3d;````
   
-
+    
     .contact--card{
 
       
@@ -242,26 +243,24 @@
       position: relative;
      
       transform-style: preserve-3d;
-      transition: 0.4s;
+      transition: all 1s;
 
-      transform: rotateY(0deg);
-
-
+      // transform: rotateY(180deg);
 
 
       .card--front, 
       .card--back {
-        position: absolute;
-        width: 200px; 
-        height: 200px;
-        border-radius: 4px;
-        // transform: rotateY(180deg);
-        
-        -webkit-backface-visibility: hidden;
-        backface-visibility: hidden;  
-      
-        // transform-style: preserve-3d;
 
+        // -webkit-backface-visibility: hidden;
+        // backface-visibility: hidden;  
+
+        position: absolute;
+        width: 100%; 
+        height: 100%;
+        border-radius: 4px;
+
+        // transform: rotateY(180deg);
+        // transform-style: preserve-3d;
         // -ms-backface-visibility: hidden;
         // -o-backface-visibility: hidden;
         // -moz-backface-visibility: hidden;
@@ -275,8 +274,8 @@
       .card--front{
         background-color: rgb(255, 246, 246);
         border: 1px solid red;
-        transform: rotateY(0deg);
-
+        // transform: rotateY(0deg);
+        z-index: 2;
 
         // -webkit-backface-visibility: hidden;
         // backface-visibility: hidden;
@@ -288,7 +287,7 @@
 
 
         // backface-visibility: hidden;
-        z-index: 200;
+        z-index: 1;
         // a{
         //   font-size: 30px;
         //   color: black;
