--- a/src/css/main.css
+++ b/src/css/main.css
@@ -130,18 +130,19 @@ body {
   overflow: visible;
   transform: perspective(1000px);
   transition: all 0.1s;
+  padding: 10px 5px;
 }
 #main-container #project .project-content .project-content--link {
   width: 400px;
   height: 300px;
-  border: 1px solid black;
-  background-color: rgb(56, 54, 58);
+  background-color: whitesmoke;
   margin: 5px 10px;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   text-decoration: none;
   overflow: visible;
+  box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.5);
 }
 #main-container #project .project-content .project-content--link img {
   width: 90%;
@@ -156,9 +157,11 @@ body {
   padding: 0px 20px;
   text-align: center;
   line-height: 84px;
-  color: white;
+  color: black;
 }
 #main-container #project .project-content .project-content--link:hover {
+  border: none;
+  box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.5);
   transition: transform 0.3s;
 }
 #main-container #project .project-content::-webkit-scrollbar {
@@ -170,7 +173,7 @@ body {
 }
 
 #contact {
-  height: 800px;
+  height: 500px;
   padding-left: 30px;
 }
 #contact h1 {
@@ -189,11 +192,14 @@ body {
 #contact .contact--list {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 #contact .contact--list .contact--flip {
   width: 300px;
   height: 300px;
   perspective: 1200px;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   padding: 30px;
   margin-left: 20px;
   overflow: visible;
@@ -204,27 +210,28 @@ body {
   position: relative;
   transform-style: preserve-3d;
   transition: all 1s;
+  border-radius: 10px;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.5);
 }
 #contact .contact--list .contact--flip .contact--card .card--front,
 #contact .contact--list .contact--flip .contact--card .card--back {
   position: absolute;
   width: 100%;
   height: 100%;
-  border-radius: 4px;
+  border-radius: 5px;
 }
 #contact .contact--list .contact--flip .contact--card .card--front {
   background-color: rgb(255, 246, 246);
-  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.5);
   z-index: 2;
   font-size: 30px;
   font-weight: bold;
-  padding: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #contact .contact--list .contact--flip .contact--card .card--back {
   transform: rotateY(180deg);
   background-color: rgb(211, 252, 255);
-  border: 1px solid rgb(64, 83, 255);
-  z-index: 1;
 }
 #contact .contact--list .contact--flip .contact--card .card--back a {
   font-size: 80px;
@@ -241,8 +248,15 @@ body {
   text-align: center;
   font-size: 20px;
 }
-#contact .contact--list .contact--flip .contact--card .card--back .icon:hover {
-  color: white;
+#contact .contact--list .contact--flip .contact--card .card--back a:hover p {
+  color: rgb(255, 91, 91);
+}
+#contact .contact--list .contact--flip .contact--card .contact--email {
+  font-size: 20px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #contact .contact--list .contact--flip:hover .contact--card {
   transform: rotateY(180deg);
