project-css changed

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,7 +5,9 @@
 $main-color :rgb(56, 54, 58);
 
 
-
+//     background-color: rgb(192 192 213);
+// 색 이쁜데 이런느낌으로 main-color 바꿀까..! 고민!
+//box-shadow: 1px 1px 1px 1px #b1a1a180;
 
 
 
