--- a/src/scss/cursor.scss
+++ b/src/scss/cursor.scss
@@ -24,7 +24,7 @@ body{
   // transition-property: scale;
   // transform: scale(1);
   // transition: scale ease-in 2s;
-  color: rgb(196, 0, 0);
+  // color: rgb(196, 0, 0);
 }
 
 
