--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -153,17 +153,22 @@
         text-decoration: none;
 
         overflow: visible;
-
         box-shadow:0px 1px 3px 1px rgba(0, 0, 0, 0.5);
 
-        img{
+        .project--imgBox{
           width: 90%;
+          height: 70%;
           margin: auto;
           // padding: 3px;
-          height: 70%;
-          background-color: antiquewhite;
-
+          overflow: hidden;
+          margin-top: 7px;
+          img{
+            width: 100%;
+            height: 100%;
+            border-radius: 4px;
+          }
         }
+        
         span{
           font-size: 25px;
           font-weight: bold;
@@ -185,7 +190,16 @@
         border: none;
         box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.5);
         transition: transform 0.3s;
+        overflow: hidden;
+        img{
+          transform: scale(1.05);
+          // overflow: hidden;
+          transition-duration: 0.5s;
+        }
       }
+
+
+
       // .project-content--link:hover::-webkit-scrollbar {
       //   display: none; /* Chrome, Safari, Opera*/
       // }
@@ -267,10 +281,9 @@
       }
   
       .card--front{
-        background-color: rgb(255, 246, 246);
-        // border: 1px solid rgb(194, 188, 188);
-        // box-shadow: 60px -16px teal;
-       
+        // background-color: rgb(255, 246, 246);
+    
+        background: linear-gradient(-45deg, #f3f5f0 50%, #dfe8eb 50%);
         z-index: 2;
         // 디자인
         font-size: 30px;
@@ -283,9 +296,9 @@
       }
       .card--back{
         transform: rotateY(180deg);
-        background-color: rgb(211, 252, 255);
-        // border: 1px solid rgb(64, 83, 255);
-        // z-index: 1;
+        // background-color: rgb(211, 252, 255);
+        background: linear-gradient(45deg, #f3f5f0 50%, #dfe8eb 50%);
+  
         a{
           font-size: 80px;
           color: black;
@@ -299,12 +312,14 @@
           align-items: center;
           justify-content: center;
           p{
+            margin-top: 15px;
             text-align: center;
-            font-size: 20px;
+            font-size: 15px;
+            font-weight: bold;
           }
         }
         a:hover p{
-          color: rgb(255, 91, 91);
+          color: rgb(214, 76, 66);
         }
       }
 
