--- a/src/css/main.css
+++ b/src/css/main.css
@@ -144,11 +144,17 @@ body {
   overflow: visible;
   box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.5);
 }
-#main-container #project .project-content .project-content--link img {
+#main-container #project .project-content .project-content--link .project--imgBox {
   width: 90%;
-  margin: auto;
   height: 70%;
-  background-color: antiquewhite;
+  margin: auto;
+  overflow: hidden;
+  margin-top: 7px;
+}
+#main-container #project .project-content .project-content--link .project--imgBox img {
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
 }
 #main-container #project .project-content .project-content--link span {
   font-size: 25px;
@@ -163,6 +169,11 @@ body {
   border: none;
   box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.5);
   transition: transform 0.3s;
+  overflow: hidden;
+}
+#main-container #project .project-content .project-content--link:hover img {
+  transform: scale(1.05);
+  transition-duration: 0.5s;
 }
 #main-container #project .project-content::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera*/
@@ -221,7 +232,7 @@ body {
   border-radius: 5px;
 }
 #contact .contact--list .contact--flip .contact--card .card--front {
-  background-color: rgb(255, 246, 246);
+  background: linear-gradient(-45deg, #f3f5f0 50%, #dfe8eb 50%);
   z-index: 2;
   font-size: 30px;
   font-weight: bold;
@@ -231,7 +242,7 @@ body {
 }
 #contact .contact--list .contact--flip .contact--card .card--back {
   transform: rotateY(180deg);
-  background-color: rgb(211, 252, 255);
+  background: linear-gradient(45deg, #f3f5f0 50%, #dfe8eb 50%);
 }
 #contact .contact--list .contact--flip .contact--card .card--back a {
   font-size: 80px;
@@ -245,11 +256,13 @@ body {
   justify-content: center;
 }
 #contact .contact--list .contact--flip .contact--card .card--back a p {
+  margin-top: 15px;
   text-align: center;
-  font-size: 20px;
+  font-size: 15px;
+  font-weight: bold;
 }
 #contact .contact--list .contact--flip .contact--card .card--back a:hover p {
-  color: rgb(255, 91, 91);
+  color: rgb(214, 76, 66);
 }
 #contact .contact--list .contact--flip .contact--card .contact--email {
   font-size: 20px;
