--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -2,41 +2,42 @@
 
 footer{
     width: 100vw;
-    height: 200px;
+    height: 100px;
     background-color: $main-color;
-    padding: 30px 0px;
-    @include flex-col;
+    padding: 22px 97px;
+    // @include flex-col;
 
-    .footer-nav{
-        @include flex-row;
-        justify-content: center;
-        .git, .blog{
-            width: 90px;
-            height: 90px;
-            margin-left: 50px;
-            // background-color: rgb(255, 151, 151);
-            // cursor: pointer;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            a{
-                display: inline-block;
-                width: 100%;
-                height: 100%;
 
-                .icon{
-                    font-size: 80px;
-                    color: white;
-                }
+    // .footer-nav{
+    //     @include flex-row;
+    //     justify-content: center;
+    //     .git, .blog{
+    //         width: 90px;
+    //         height: 90px;
+    //         margin-left: 50px;
+    //         // background-color: rgb(255, 151, 151);
+    //         // cursor: pointer;
+    //         display: flex;
+    //         justify-content: center;
+    //         align-items: center;
+    //         a{
+    //             display: inline-block;
+    //             width: 100%;
+    //             height: 100%;
 
-                .icon:hover{
-                    color: black;
-                    transition-duration: 0.3s;
-                }
-            }
+    //             .icon{
+    //                 font-size: 80px;
+    //                 color: white;
+    //             }
+
+    //             .icon:hover{
+    //                 color: black;
+    //                 transition-duration: 0.3s;
+    //             }
+    //         }
             
-        }
-    }
+    //     }
+    // }
 
     .footer-rights{
         text-align: center;
